some small things fixed and added

--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -699,7 +699,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_CARVED_WALL_LEAVE</zType>
-		<Translation><![CDATA[Ich bin froh solch kluge Feldherren zu haben, ich schätze ihren Diesnt sehr.]]></Translation>
+		<Translation><![CDATA[Ich bin froh solch kluge Feldherren zu haben, ich schätze ihren Dienst sehr.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_RUINS_MONUMENTS_OF_LAW_SAGES</zType>
