--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -162,15 +162,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_VEGETATION_SCRUB</zType>
-		<Translation>Busch~ein Gebüsch~Büsche</Translation>
+		<Translation>Dickicht~ein Dickicht~Dickichte</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_VEGETATION_SCRUB_REMOVE</zType>
-		<Translation>Entbüsche Busch</Translation>
+		<Translation>Entbüsche Dickicht</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_VEGETATION_SCRUB_CUT</zType>
-		<Translation>Busch (entbüschen)~ein Busch (entbüschen)~Büsche (entbüschen)</Translation>
+		<Translation>Dickicht (entbüschen)~ein Dickicht (entbüschen)~Dickichte (entbüschen)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_VEGETATION_SCRUB_CUT_REMOVE</zType>
