--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -47,7 +47,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_11</zType>
-		<Translation>Wenn du nicht genug Materialien hast um eine Einheit oder Verbesserung zu bauen, halte ALT und klicke um automatsich das zu kaufen, was dir fehlt (Natürlich nur Vorrausgesetzt du hast genug Moneyicon(YIELD_MONEY).</Translation>
+		<Translation>Wenn du nicht genug Materialien hast um eine Einheit oder Verbesserung zu bauen, halte ALT und klicke um automatsich das zu kaufen, was dir fehlt (Natürlich nur Vorrausgesetzt du hast genug icon(YIELD_MONEY).</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_12</zType>
@@ -55,7 +55,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_13</zType>
-		<Translation>Barbaren sind fremdenfeindliche Stämme allen Staaten gegenüber feindlich.Es gibt keine diplomatischen Konsequenzen wenn ihre Einheiten angegriffen werden oder ihr Land übernommen wird. Sie haben keine Verbündeten, nicht mal anderen Barbaren.</Translation>
+		<Translation>Barbaren sind fremdenfeindliche Stämme  und allen Staaten gegenüber feindlich.Es gibt keine diplomatischen Konsequenzen wenn ihre Einheiten angegriffen werden oder ihr Land übernommen wird. Sie haben keine Verbündeten, nicht mal anderen Barbaren.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_14</zType>
