--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -372,7 +372,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INCUBATED</zType>
-		<Translation>Kränkeln</Translation>
+		<Translation>Kränkelnd</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_POISONER</zType>
