more translation for "archetypes" mod

--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -335,7 +335,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_RUINS_THE_DIVINER_TITLE</zType>
-		<Translation>Der Wahrsager</Translation>
+		<Translation>Die Wahrsagerin</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_RIDDLE_OF_THE_GATE_TITLE</zType>
