--- a/Translations/German/text-trait-add.xml
+++ b/Translations/German/text-trait-add.xml
@@ -3,7 +3,7 @@
 <Root>
 	<Entry>
 		<zType>TEXT_TRAIT_STUDY_ASTRONOMY</zType>
-		<Translation>SChüler der Astronomie</Translation>
+		<Translation>Schüler der Astronomie</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_STUDY_PYTHAGOREANISM</zType>
