--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -243,7 +243,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_UNIT_ACTIONS_SLEEP</zType>
-		<Translation>Schlafen</Translation>
+		<Translation>Ausruhen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_UNIT_ACTIONS_SENTRY</zType>
