typo and minor changes

--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -139,7 +139,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_34</zType>
-		<Translation>icon(YIELD_WOOD) vom Dickicht zu entfernen kostet keinen  icon(YIELD_ORDERS) . Wenn du dich auf einem Weg woanders hin mit einen Baumeister durch ein Dickicht Feld bewegst kannst du etwas kostenloses  icon(YIELD_WOOD)  sammeln.</Translation>
+		<Translation>icon(YIELD_WOOD) vom Dickicht zu entfernen kostet keine  icon(YIELD_ORDERS) . Wenn du dich auf einem Weg woanders hin mit einen Baumeister durch ein Dickicht Feld bewegst kannst du etwas kostenloses  icon(YIELD_WOOD)  sammeln.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_35</zType>
