--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -96,7 +96,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_MUSAEUM</zType>
-		<Translation>Das Musäum in Alexandria</Translation>
+		<Translation>Das Museum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_CIRCUS_MAXIMUS</zType>
