--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -3311,7 +3311,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_WONDER_MUSAEUM_TITLE</zType>
-		<Translation>Das Musäum in Alexandria</Translation>
+		<Translation>Das Museum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_WONDER_CIRCUS_MAXIMUS_TITLE</zType>
